Add Read for fiscal periods

--- a/Views/Accounts/FiscalPeriods.cshtml
+++ b/Views/Accounts/FiscalPeriods.cshtml
@@ -1,4 +1,4 @@
-﻿@model Accounts.Models.VM.FiscalPeriodVMList
+﻿@model Accounts.Models.VM.FiscalPeriodVM
 
 <div class=row>
     <div class="panel panel-default">
@@ -6,7 +6,8 @@
             <h6 class=panel-title>Fiscal Period Details</h6>
         </div>
         <div class=panel-body>
-            <form method=post id=FiscalPeriodForm>
+            <form asp-controller="Accounts" asp-action="FiscalPeriods" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class=row>
                     <div class=col-sm-6>
                         <input hidden type=number data-val=true data-val-required="The FiscalPeriodID field is required." id=FiscalPeriodID name=FiscalPeriodID>
@@ -15,28 +16,30 @@
                             <label>
                                 <small>Period ID</small>
                             </label>
-                            <input class="form-control input-sm" readonly type=number data-val=true data-val-required="The FiscalPeriodNo field is required." id=FiscalPeriodNo name=FiscalPeriodNo>
+                            <input class="form-control input-sm" readonly type=number data-val=true data-val-required="The FiscalPeriodNo field is required." >                       </div>
+                        <div class=form-group>                           
+                            <label asp-for="OpenDate" class="control-label"></label>
+                            <input asp-for="OpenDate" class="form-control input-sm" />
+                            <span asp-validation-for="OpenDate" class="text-danger"></span>
                         </div>
-                        <div class=form-group>
-                            <label>
-                                <small>Open Date</small>
-                            </label>
-                            <input class="form-control input-sm" type=date data-val=true data-val-required="The OpenDate field is required." id=OpenDate name=OpenDate>
-                        </div>
+
                     </div>
                     <div class=col-sm-6>
-                        <div class=form-group>
-                            <label>
-                                <small>Close Date</small>
-                            </label>
-                            <input class="form-control input-sm" type=date data-val=true data-val-required="The CloseDate field is required." id=CloseDate name=CloseDate>
+                        <div class=form-group>                      
+                            
+                            <label asp-for="CloseDate" class="control-label"></label>
+                            <input value="8" asp-for="CloseDate" class="form-control input-sm" required data-val=true data-val-required="The Name field is required." id=Item_Name />
+                            <span asp-validation-for="CloseDate" class="text-danger"></span>
                         </div>
                         <div class=form-group>
                             <div class=col-md-6>
                                 <div class=checkbox>
                                     <label class=checkbox>
-                                        <input type=checkbox id=IsActive>Is Active
-                                    </label>
+                                        <input type=checkbox >Is Active
+                                    </label>@*
+                                    <label asp-for="IsActive" class="control-label"></label>
+                                    <input type="checkbox" id="IsActive" asp-for="IsActive" class="form-control input-sm" required data-val=true data-val-required="The Name field is required." />
+                                    <span asp-validation-for="IsActive" class="text-danger"></span>*@
                                 </div>
                             </div>
                             <div class=col-md-6>
@@ -47,21 +50,24 @@
                                 </div>
                             </div>
                         </div>
-                        <div id=update hidden>
+                    @*    <div id=update hidden>
                             <div class="btn-group pull-right">
                                 <button id=btnupdateperiod class="btn btn-primary btn-sm ladda-button" data-style=expand-right data-size=s>Update</button>
                                 <a id=btnCreateNew class="btn btn-primary btn-sm">New</a>
                             </div>
-                        </div>
+                        </div>*@
                         <div id=addperiod>
-                            <button id=btnaddperiod class="btn btn-primary pull-right ladda-button" data-style=expand-right data-size=s>
+                         @*   <button id=btnaddperiod class="btn btn-primary pull-right ladda-button" data-style=expand-right data-size=s>
                                 <span class="glyphicon glyphicon-plus"></span>
-                            </button>
+                            </button>*@
+
+                            <button type="submit" class="btn btn-primary">Save changes</button>
                         </div>
                     </div>
                 </div>
-                <input name=__RequestVerificationToken type=hidden value=CfDJ8It5D1qqI4lBjCCzFnB6CeqHdF91dLenF2kxIqaDdi2MfHybFWc6sFRww7SwMRRlIHaywfCWGr31QUTkHrp7YlmYGkhwhSGpf8F6fhXPwKNpIYnh-SZRkbauJ5UYF1t3q4SY9lxfnEYcL_O8UCG_vRjC84Rz-JPDsyp12SbKoNAXTaBtv2SOS65PlXOWvWepbg>
+               @* <input name=__RequestVerificationToken type=hidden value=CfDJ8It5D1qqI4lBjCCzFnB6CeqHdF91dLenF2kxIqaDdi2MfHybFWc6sFRww7SwMRRlIHaywfCWGr31QUTkHrp7YlmYGkhwhSGpf8F6fhXPwKNpIYnh-SZRkbauJ5UYF1t3q4SY9lxfnEYcL_O8UCG_vRjC84Rz-JPDsyp12SbKoNAXTaBtv2SOS65PlXOWvWepbg>*@
             </form>
+
         </div>
         <div class=panel-heading>
             <h6 class=panel-title>View: Fiscal Periods</h6>
