submit form using ajax

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,10 +11,10 @@
         <link rel=preload href="~/css/site.min.css?v=j6ExleZLhlkHO7BJI4dfYesLDSss3AwV6PHMFVPXQiw" as=style>
         <link rel=stylesheet href="~/css/site.css">
         <link rel=preload href="~/lib/jquery/dist/jquery.min.js?v=CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo" as=script>
-        <link rel=preload href="~/js/signalr/signalr.min.js?v=aNSbXaEA6wcVsUTxsuF1mI-mKauMNEMkhXShRZaQMnE" as=script>
+       @* <link rel=preload href="~/js/signalr/signalr.min.js?v=aNSbXaEA6wcVsUTxsuF1mI-mKauMNEMkhXShRZaQMnE" as=script>*@
         <link rel=preload href="~/js/main.min.js?v=FGdNIVyQp87KxSZVvrK9dunmd0HJo5hCDmHZAX_FxeE" as=script>
         <link rel=preload href="~/css/assets.min.css?v=pC99z4nR8ke9vhJ9o1QGU1oJz2MSCaHTJvXg3_QP3Sc" as=style>
-        <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">  
+       @* <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">  *@
         <style>
            
         </style>
@@ -427,7 +427,7 @@
             document.getElementById("divBody").style.display = "block";
         };
     </script>
-    <script src="~/js/signalr/signalr.min.js?v=aNSbXaEA6wcVsUTxsuF1mI-mKauMNEMkhXShRZaQMnE" defer></script>
+   @* <script src="~/js/signalr/signalr.min.js?v=aNSbXaEA6wcVsUTxsuF1mI-mKauMNEMkhXShRZaQMnE" defer></script>*@
     <script src="~/js/main.min.js?v=FGdNIVyQp87KxSZVvrK9dunmd0HJo5hCDmHZAX_FxeE" defer></script>
     <script>
         const GuideLink = 'Inventory';
