--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -435,6 +435,10 @@
     <script>
         EnterSubmitsFormsOnThisPage = true;
     </script>
+    <script src="https://webapps1.chicago.gov/cdn/jQuery-3.4.1/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js" integrity="sha512-rstIgDs0xPgmG6RX1Aba4KV5cWJbAMcvRCVmglpam9SoHZiUCyQVDdH2LPlxoHtrv17XWblE/V/PP+Tr04hbtA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js" integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="~/js/quagga/quagga.min.js?v=JDVyLQRqvRSTL_6WaPud93JXpfEdW11zwjqhoNgkGXc" defer></script>
     <script src="~/js/bacodescanner.js?v=PvSeFZtOSKE3EkUpoOEz49wl2jH-BwFaW76RYtqNnbY" defer></script>
     <script src="~/js/inventory/inventory.min.js?v=0-WIF2KD19xgySOGzePhFkwCdeO5lAsPPOmxNVDMvk4" defer></script>
