--- a/Views/Accounts/GeneralLedgerAccounts.cshtml
+++ b/Views/Accounts/GeneralLedgerAccounts.cshtml
@@ -326,6 +326,8 @@
 
 
 @await Html.PartialAsync("./PartialViews/_AddAccountClass")
+@await Html.PartialAsync("./PartialViews/_TransferSubAccountBalance")
+@await Html.PartialAsync("./PartialViews/_CashFlowCategories")
 
 @*<script src="~/js/Accounts/generalledgeraccounts.js"></script>*@
 
