--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
         <link rel=preload href="~/js/main.min.js?v=FGdNIVyQp87KxSZVvrK9dunmd0HJo5hCDmHZAX_FxeE" as=script>
         <link rel=preload href="~/css/assets.min.css?v=pC99z4nR8ke9vhJ9o1QGU1oJz2MSCaHTJvXg3_QP3Sc" as=style>
        @* <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">  *@
-        <style>
+        <link rel="stylesheet" href="~/font-awesome-4.7.0/css/font-awesome.css">
+        <link rel="stylesheet" href="~/font-awesome-4.7.0/css/all.min.css">
+    <style>
            
         </style>
         <script>
